Mu/MuGrammarParser.java
// Generated from MuGrammar.g4 by ANTLR 4.6
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MuGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, Var=4, Prop=5, Not=6, And=7, Or=8, Dia=9, Box=10, 
		Mu=11, Nu=12, Dot=13, NL=14, WS=15;
	public static final int
		RULE_form = 0, RULE_nform = 1, RULE_and = 2, RULE_lpar = 3, RULE_comma = 4, 
		RULE_rpar = 5, RULE_or = 6, RULE_diamond = 7, RULE_box = 8, RULE_mu = 9, 
		RULE_nu = 10;
	public static final String[] ruleNames = {
		"form", "nform", "and", "lpar", "comma", "rpar", "or", "diamond", "box", 
		"mu", "nu"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "' , '", "')'", null, null, "'N'", "'and'", "'or'", "'<a>'", 
		"'[a]'", "'m'", "'n'", "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "Var", "Prop", "Not", "And", "Or", "Dia", "Box", 
		"Mu", "Nu", "Dot", "NL", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MuGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MuGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FormContext extends ParserRuleContext {
		public TerminalNode Var() { return getToken(MuGrammarParser.Var, 0); }
		public TerminalNode Prop() { return getToken(MuGrammarParser.Prop, 0); }
		public NformContext nform() {
			return getRuleContext(NformContext.class,0);
		}
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public DiamondContext diamond() {
			return getRuleContext(DiamondContext.class,0);
		}
		public BoxContext box() {
			return getRuleContext(BoxContext.class,0);
		}
		public MuContext mu() {
			return getRuleContext(MuContext.class,0);
		}
		public NuContext nu() {
			return getRuleContext(NuContext.class,0);
		}
		public FormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_form; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).enterForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).exitForm(this);
		}
	}

	public final FormContext form() throws RecognitionException {
		FormContext _localctx = new FormContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_form);
		try {
			setState(31);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Var:
				enterOuterAlt(_localctx, 1);
				{
				setState(22);
				match(Var);
				}
				break;
			case Prop:
				enterOuterAlt(_localctx, 2);
				{
				setState(23);
				match(Prop);
				}
				break;
			case Not:
				enterOuterAlt(_localctx, 3);
				{
				setState(24);
				nform();
				}
				break;
			case And:
				enterOuterAlt(_localctx, 4);
				{
				setState(25);
				and();
				}
				break;
			case Or:
				enterOuterAlt(_localctx, 5);
				{
				setState(26);
				or();
				}
				break;
			case Dia:
				enterOuterAlt(_localctx, 6);
				{
				setState(27);
				diamond();
				}
				break;
			case Box:
				enterOuterAlt(_localctx, 7);
				{
				setState(28);
				box();
				}
				break;
			case Mu:
				enterOuterAlt(_localctx, 8);
				{
				setState(29);
				mu();
				}
				break;
			case Nu:
				enterOuterAlt(_localctx, 9);
				{
				setState(30);
				nu();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NformContext extends ParserRuleContext {
		public TerminalNode Not() { return getToken(MuGrammarParser.Not, 0); }
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public NformContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nform; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).enterNform(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).exitNform(this);
		}
	}

	public final NformContext nform() throws RecognitionException {
		NformContext _localctx = new NformContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nform);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			match(Not);
			setState(34);
			form();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndContext extends ParserRuleContext {
		public TerminalNode And() { return getToken(MuGrammarParser.And, 0); }
		public LparContext lpar() {
			return getRuleContext(LparContext.class,0);
		}
		public List<FormContext> form() {
			return getRuleContexts(FormContext.class);
		}
		public FormContext form(int i) {
			return getRuleContext(FormContext.class,i);
		}
		public CommaContext comma() {
			return getRuleContext(CommaContext.class,0);
		}
		public RparContext rpar() {
			return getRuleContext(RparContext.class,0);
		}
		public AndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_and; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).enterAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).exitAnd(this);
		}
	}

	public final AndContext and() throws RecognitionException {
		AndContext _localctx = new AndContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_and);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(And);
			setState(37);
			lpar();
			setState(38);
			form();
			setState(39);
			comma();
			setState(40);
			form();
			setState(41);
			rpar();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LparContext extends ParserRuleContext {
		public LparContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lpar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).enterLpar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).exitLpar(this);
		}
	}

	public final LparContext lpar() throws RecognitionException {
		LparContext _localctx = new LparContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lpar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommaContext extends ParserRuleContext {
		public CommaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).enterComma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).exitComma(this);
		}
	}

	public final CommaContext comma() throws RecognitionException {
		CommaContext _localctx = new CommaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comma);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RparContext extends ParserRuleContext {
		public RparContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rpar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).enterRpar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).exitRpar(this);
		}
	}

	public final RparContext rpar() throws RecognitionException {
		RparContext _localctx = new RparContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rpar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrContext extends ParserRuleContext {
		public TerminalNode Or() { return getToken(MuGrammarParser.Or, 0); }
		public LparContext lpar() {
			return getRuleContext(LparContext.class,0);
		}
		public List<FormContext> form() {
			return getRuleContexts(FormContext.class);
		}
		public FormContext form(int i) {
			return getRuleContext(FormContext.class,i);
		}
		public CommaContext comma() {
			return getRuleContext(CommaContext.class,0);
		}
		public RparContext rpar() {
			return getRuleContext(RparContext.class,0);
		}
		public OrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_or; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).enterOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).exitOr(this);
		}
	}

	public final OrContext or() throws RecognitionException {
		OrContext _localctx = new OrContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_or);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(Or);
			setState(50);
			lpar();
			setState(51);
			form();
			setState(52);
			comma();
			setState(53);
			form();
			setState(54);
			rpar();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DiamondContext extends ParserRuleContext {
		public TerminalNode Dia() { return getToken(MuGrammarParser.Dia, 0); }
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public DiamondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_diamond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).enterDiamond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).exitDiamond(this);
		}
	}

	public final DiamondContext diamond() throws RecognitionException {
		DiamondContext _localctx = new DiamondContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_diamond);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(Dia);
			setState(57);
			form();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoxContext extends ParserRuleContext {
		public TerminalNode Box() { return getToken(MuGrammarParser.Box, 0); }
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public BoxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_box; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).enterBox(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).exitBox(this);
		}
	}

	public final BoxContext box() throws RecognitionException {
		BoxContext _localctx = new BoxContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_box);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(Box);
			setState(60);
			form();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MuContext extends ParserRuleContext {
		public TerminalNode Mu() { return getToken(MuGrammarParser.Mu, 0); }
		public TerminalNode Var() { return getToken(MuGrammarParser.Var, 0); }
		public TerminalNode Dot() { return getToken(MuGrammarParser.Dot, 0); }
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public MuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mu; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).enterMu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).exitMu(this);
		}
	}

	public final MuContext mu() throws RecognitionException {
		MuContext _localctx = new MuContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_mu);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(Mu);
			setState(63);
			match(Var);
			setState(64);
			match(Dot);
			setState(65);
			form();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NuContext extends ParserRuleContext {
		public TerminalNode Nu() { return getToken(MuGrammarParser.Nu, 0); }
		public TerminalNode Var() { return getToken(MuGrammarParser.Var, 0); }
		public TerminalNode Dot() { return getToken(MuGrammarParser.Dot, 0); }
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public NuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nu; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).enterNu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuGrammarListener ) ((MuGrammarListener)listener).exitNu(this);
		}
	}

	public final NuContext nu() throws RecognitionException {
		NuContext _localctx = new NuContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_nu);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(Nu);
			setState(68);
			match(Var);
			setState(69);
			match(Dot);
			setState(70);
			form();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}